# DIY-Led-segment-displays

./: .mpyproject.json  CMakeLists.txt  README.md  led_segment_displays.c  main.cpp  main.py
micro_python/: .mpyproject.json  led_segment_displays.py
